--- a/django_quiz/blog/templates/blog/base.html
+++ b/django_quiz/blog/templates/blog/base.html
@@ -14,9 +14,9 @@
 
     <!-- Title -->
     {% if title %}
-        <title>Django Blog - {{ title }}</title>
+        <title>ClassQuiz- {{ title }}</title>
     {% else %}
-        <title>Django Blog</title>
+        <title>ClassQuiz</title>
     {% endif %}
   </head>
   <body>
@@ -24,19 +24,19 @@
         <!-- Navigation Bar -->
         <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
             <div class="container">
-                <a class="navbar-brand mr-4" href="{% url 'blog-home' %}">Django Blog</a>
+                <a class="navbar-brand mr-4" href="{% url 'quiz-home' %}">ClassQuiz</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarToggle">
                     <div class="navbar-nav mr-auto">
-                        <a class="nav-item nav-link" href="{% url 'blog-home' %}">Home</a>
+                        <a class="nav-item nav-link" href="{% url 'quiz-home' %}">Home</a>
                         <a class="nav-item nav-link" href="{% url 'blog-about' %}">About</a>
                     </div>
                     <!-- Navbar Right Side -->
                     <div class="navbar-nav">
                         {% if user.is_authenticated %}
-                            <a class="nav-item nav-link" href="{% url 'post-create' %}">New Post</a>
+                            {% comment %} <a class="nav-item nav-link" href="{% url 'post-create' %}">New Post</a> {% endcomment %}
                             <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
                             <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
                         {% else %}
@@ -52,7 +52,7 @@
     <!-- Content -->
     <main role="main" class="container">
         <div class="row">
-            <div class="col-md-8">
+            <div class="col-md-9">
                 {% if messages %}
                     {% for messages in messages %}
                         <div class="alert alert-{{ messages.tags }}">
@@ -63,19 +63,20 @@
                 {% block content %}
                 {% endblock %}
             </div>
-            <div class="col-md-4">
-                <div class="content-section">
-                    <h3>Our Sidebar</h3>
-                    <p class='text-muted'>You can put any information here you'd like.
-                    <ul class="list-group">
-                        <li class="list-group-item list-group-item-light">Latest Posts</li>
-                        <li class="list-group-item list-group-item-light">Announcements</li>
-                        <li class="list-group-item list-group-item-light">Calendars</li>
-                        <li class="list-group-item list-group-item-light">etc</li>
-                    </ul>
-                    </p>
+            {% if user.is_authenticated %}
+                <div class="col-md-3">
+                    <div class="content-section">
+                        <h3>Quiz Sidebar</h3>
+                        <p class='text-muted'>You can put any information here you'd like.
+                            <ul class="list-group">
+                                <a class="list-group-item list-group-item-light" href="{% url 'quiz-create' %}">Create</a>
+                                <a class="list-group-item list-group-item-light" href="{% url 'user-quiz' user.username %}">Quizzes</a> 
+                                <a class="list-group-item list-group-item-light" href="#">Show</a>
+                            </ul>
+                        </p>
+                    </div>
                 </div>
-            </div>
+            {% endif %}
         </div>
     </main>
 
