--- a/django_quiz/quiz/templates/quiz/quiz_detail.html
+++ b/django_quiz/quiz/templates/quiz/quiz_detail.html
@@ -8,7 +8,7 @@
                 <small class="text-muted">{{ object.date_created|date:"F d, Y" }}</small>    <!-- see DJANGO date formatting template documentation -->
                 {% if object.author == user %}
                     <a class="btn btn-secondary btn-sm mt-1 mb-1 mr-1" href="{% url 'quiz-edit' object.id %}">Edit</a>
-                    <a class="btn btn-danger btn-sm mt-1 mb-1" href="#">Delete</a>
+                    <a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'quiz-delete' object.id %}">Delete</a>
                 {% endif %}
             </div>
             <!-- Quiz -->
