--- a/django_quiz/quiz/templates/quiz/user_quiz.html
+++ b/django_quiz/quiz/templates/quiz/user_quiz.html
@@ -14,8 +14,8 @@
                     <!-- Buttons -->
                     {% if quiz.author == user %}
                         <div>
-                            <a class="btn btn-secondary btn-sm mt-1 mb-1" href="#">Edit</a>
-                            <a class="btn btn-danger btn-sm mt-1 mb-1" href="#">Delete</a>
+                            <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'quiz-edit' quiz.id %}">Edit</a>
+                            <a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'quiz-delete' quiz.id %}">Delete</a>
                         </div>
                     {% endif %}
                 </div>
