--- a/django_quiz/quiz/templates/quiz/quiz_form.html
+++ b/django_quiz/quiz/templates/quiz/quiz_form.html
@@ -2,7 +2,7 @@
 {% load crispy_forms_tags %}
 {% block content %}
     <div class="content-section">
-        <form method="POST">    <!-- must be "POST" for some reason... -->
+        <form method="POST" enctype="multipart/form-data">    <!-- enctype="multipart/form-data" IS NECESSARY for images !! -->
             {% csrf_token %}    <!-- Security Token. It's necessary, otherwise the form won't work. -->
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">
@@ -11,7 +11,7 @@
                 {{ form|crispy }}
             </fieldset>
             <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Create</button>
+                <button class="btn btn-outline-info" type="submit">Submit</button>
             </div>
         </form>
     </div>
