--- a/django_quiz/quiz/templates/quiz/quiz_detail.html
+++ b/django_quiz/quiz/templates/quiz/quiz_detail.html
@@ -7,8 +7,9 @@
                 <a class="mr-2" href="{% url 'user-quiz' object.author.username %}">{{ object.author }}</a>
                 <small class="text-muted">{{ object.date_created|date:"F d, Y" }}</small>    <!-- see DJANGO date formatting template documentation -->
                 {% if object.author == user %}
-                    <a class="btn btn-outline-secondary btn-sm mt-1 mb-1 mr-1" href="{% url 'quiz-edit' object.id %}">Edit</a>
                     <a class="btn btn-outline-danger btn-sm mt-1 mb-1" href="{% url 'quiz-delete' object.id %}">Delete</a>
+                    <a class="btn btn-outline-secondary btn-sm mt-1 mb-1 mr-1" href="{% url 'quiz-edit' object.id %}">Edit</a>
+                    <a class="btn btn-outline-info btn-sm mt-1 mb-1 mr-1" href="{% url 'quiz-show' object.id %}">Start</a>
                 {% endif %}
             </div>
             <!-- Quiz -->
