--- a/django_quiz/quiz/templates/quiz/user_quiz.html
+++ b/django_quiz/quiz/templates/quiz/user_quiz.html
@@ -12,12 +12,12 @@
                     <h2><a class="article-title" href="{% url 'quiz-detail' quiz.id %}">{{ quiz.question }}</a></h2>
                     <h6>{{ quiz.course }}</h6>
                     <!-- Buttons -->
-                    {% if quiz.author == user %}
+                    {% comment %} {% if quiz.author == user %}
                         <div>
                             <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'quiz-edit' quiz.id %}">Edit</a>
                             <a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'quiz-delete' quiz.id %}">Delete</a>
                         </div>
-                    {% endif %}
+                    {% endif %} {% endcomment %}
                 </div>
             </div>
         </article>
