--- a/django_quiz/blog/static/blog/main.css
+++ b/django_quiz/blog/static/blog/main.css
@@ -88,3 +88,27 @@ body {
     height: auto;
     object-fit: contain;
   }
+
+  .card-signin {
+    border: 0;
+    border-radius: 1rem;
+    box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.1);
+  }
+
+  .dropdown:hover>.dropdown-menu {
+    display: block;
+  }
+
+ @media (min-width: 992px) {
+  .animate {
+    animation-duration: 0.3s;
+    -webkit-animation-duration: 0.3s;
+    animation-fill-mode: both;
+    -webkit-animation-fill-mode: both;
+  }
+}
+
+.slideIn {
+  -webkit-animation-name: slideIn;
+  animation-name: slideIn;
+}
