--- a/django_quiz/users/templates/users/password_reset.html
+++ b/django_quiz/users/templates/users/password_reset.html
@@ -1,18 +1,20 @@
 {% extends "blog/base.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
-    <div class="content-section">
-        <form method="POST">
-            {% csrf_token %}    <!-- Security Token. It's necessary, otherwise the form won't work. -->
-            <fieldset class="form-group">
-                <legend class="border-bottom mb-4">
-                    Reset Password
-                </legend>
-                {{ form|crispy }}
-            </fieldset>
-            <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Request Password Reset</button>
-            </div>
-        </form>
+    <div class="card card-signin my-5">
+        <div class="card-body">
+            <form method="POST">
+                {% csrf_token %}    <!-- Security Token. It's necessary, otherwise the form won't work. -->
+                <fieldset class="form-group">
+                    <legend class="border-bottom mb-4">
+                        Reset Password
+                    </legend>
+                    {{ form|crispy }}
+                </fieldset>
+                <div class="form-group">
+                    <button class="btn btn-outline-info" type="submit">Request Password Reset</button>
+                </div>
+            </form>
+        </div>
     </div>
 {% endblock content %}
