added 'filter by: course' to user_quiz view

--- a/django_quiz/quiz/templates/quiz/home.html
+++ b/django_quiz/quiz/templates/quiz/home.html
@@ -20,6 +20,7 @@
         </div>
     {% endfor %}
     </div>
+    <!-- Filter by 'course' - JavaScript function -->
     <script>
         function myFunction() {
             var input, filter, cards, cardContainer, p, title, i;
