--- a/django_quiz/quiz/templates/quiz/quiz_show.html
+++ b/django_quiz/quiz/templates/quiz/quiz_show.html
@@ -10,7 +10,7 @@
                         </div>
                     {% endfor %}
                 {% endif %}
-                <article class="media content-section">
+                <article class="media content-section" id="myQuiz">
                     <div class="media-body">
                         <!-- Quiz -->
                         <div class="row justify-content-center">
@@ -41,7 +41,25 @@
                 </article>
             </div>
         </div>
-        <button class="btn btn-outline-info btn-block" type="button">Start</button>
+        <button class="btn btn-outline-info btn-block" type="button" onClick=="goFullscreen()" id="start_btn">Start</button>
+        <!-- Go Fullscreen - JavaScript function -->
+        <script>
+            document.getElementById("start_btn").addEventListener("click", function goFullscreen() {
+                var elem = document.getElementById("myQuiz");
+                if (elem.requestFullscreen) {
+                    elem.requestFullscreen();
+                } 
+                else if (elem.msRequestFullscreen) {
+                    elem.msRequestFullscreen();
+                } 
+                else if (elem.mozRequestFullScreen) {
+                    elem.mozRequestFullScreen();
+                } 
+                else if (elem.webkitRequestFullscreen) {
+                    elem.webkitRequestFullscreen();
+                }
+            });
+        </script>
     </main>
 {% endblock content %}
 
